--- a/index.html
+++ b/index.html
@@ -39,43 +39,43 @@ crossorigin="anonymous"></script>
             <li><a class="dropdown-item dropdown-toggle" href="#">National/Local APWU, and Other Unions</a>
               <ul class="submenu submenu-left dropdown-menu">
                 <li><a class="dropdown-item" href="https://www.apwu.org/" target="_self">National APWU</a></li> 
-                <li><a class="dropdown-item" href="http://www.facebook.com/APWUnational" target="_blank">APWU Facebook Page</a></li>
-                <li><a class="dropdown-item" href="https://apwu.org/support-services-division" target="_blank">Support Services Craft APWU</a></li>
-                <li><a class="dropdown-item" href="http://www.nalc.org/" target="_blank">National Association of Letter Carriers</a></li>
-                <li><a class="dropdown-item" href="http://www.aflcio.org/" target="_blank">National AFL-CIO</a></li>
-                <li><a class="dropdown-item" href="http://www.mnaflcio.org/" target="_blank">Minnesota AFL-CIO</a></li>
-                <li><a class="dropdown-item" href="http://www.facebook.com/mnaflcio" target="_blank">MN AFL-CIO Facebook Page</a></li>
+                <li><a class="dropdown-item" href="http://www.facebook.com/APWUnational" target="_self">APWU Facebook Page</a></li>
+                <li><a class="dropdown-item" href="https://apwu.org/support-services-division" target="_self">Support Services Craft APWU</a></li>
+                <li><a class="dropdown-item" href="http://www.nalc.org/" target="_self">National Association of Letter Carriers</a></li>
+                <li><a class="dropdown-item" href="http://www.aflcio.org/" target="_self">National AFL-CIO</a></li>
+                <li><a class="dropdown-item" href="http://www.mnaflcio.org/" target="_self">Minnesota AFL-CIO</a></li>
+                <li><a class="dropdown-item" href="http://www.facebook.com/mnaflcio" target="_self">MN AFL-CIO Facebook Page</a></li>
               </ul>
             </li>
             <li><a class="dropdown-item dropdown-toggle" href="#">News</a>
               <ul class="submenu submenu-left dropdown-menu">
-                <li><a class="dropdown-item" href="http://www.lunewsviews.com/" target="_blank">Postal Reporter</a></li>
-                <li><a class="dropdown-item" href="https://ilcaonline.org/workers-independent-news-win/" target="_blank">Workers Independent News</a></li>
+                <li><a class="dropdown-item" href="http://www.lunewsviews.com/" target="_self">Postal Reporter</a></li>
+                <li><a class="dropdown-item" href="https://ilcaonline.org/workers-independent-news-win/" target="_self">Workers Independent News</a></li>
               </ul>
             </li>
             <li><a class="dropdown-item dropdown-toggle" href="#">Labor History</a>
               <ul class="submenu submenu-left dropdown-menu">
-                <li><a class="dropdown-item" href="http://www.thefriends.org/programs/annual_events/untold.html" target="_blank">Untold Labor History Series</a></li>
-                <li><a class="dropdown-item" href="http://guides.lib.washington.edu/content.php?pid=80438&sid=596049" target="_blank">History - Labor</a></li>
+                <li><a class="dropdown-item" href="http://www.thefriends.org/programs/annual_events/untold.html" target="_self">Untold Labor History Series</a></li>
+                <li><a class="dropdown-item" href="http://guides.lib.washington.edu/content.php?pid=80438&sid=596049" target="_self">History - Labor</a></li>
               </ul>
             </li>
             <li><a class="dropdown-item dropdown-toggle" href="#">USPS Links</a>
               <ul class="submenu submenu-left dropdown-menu">
                 <li><a class="dropdown-item" href="http://www.usps.com/" target="_self">USPS Commercial Site</a></li>
-                <li><a class="dropdown-item" href="https://liteblue.usps.gov/" target="_blank">USPS Lite Blue</a></li>
-                <li><a class="dropdown-item" href="http://www.lunewsviews.com/earnings_statement.htm" target="_blank">How to Read Your Paystub</a></li>
+                <li><a class="dropdown-item" href="https://liteblue.usps.gov/" target="_self">USPS Lite Blue</a></li>
+                <li><a class="dropdown-item" href="http://www.lunewsviews.com/earnings_statement.htm" target="_self">How to Read Your Paystub</a></li>
               </ul>
             </li>
             <li><a class="dropdown-item dropdown-toggle" href="#">Benefits for being a Union Member</a>
               <ul class="submenu submenu-left dropdown-menu">
-                <li><a class="dropdown-item" href="http://www.unionplus.org/" target="_blank">Union Plus</a></li>
-                <li><a class="dropdown-item" href="http://www.apw-aba.org/" target="_blank">Accident Benefit Association</a></li>
+                <li><a class="dropdown-item" href="http://www.unionplus.org/" target="_self">Union Plus</a></li>
+                <li><a class="dropdown-item" href="http://www.apw-aba.org/" target="_self">Accident Benefit Association</a></li>
               </ul>
             </li>
             <li><a class="dropdown-item dropdown-toggle" href="#">Health Plan and Open Season Information</a>
               <ul class="submenu submenu-left dropdown-menu">
-                <li><a class="dropdown-item" href="http://www.apwuhp.com/" target="_blank">APWU Health Plan</a></li>
-                <li class="nav-item active"><a class="dropdown-item" href="http://opm.gov/insure/" target="_blank">Office of Personnel Management - Benefits Information</a></li>
+                <li><a class="dropdown-item" href="http://www.apwuhp.com/" target="_self">APWU Health Plan</a></li>
+                <li class="nav-item active"><a class="dropdown-item" href="http://opm.gov/insure/" target="_self">Office of Personnel Management - Benefits Information</a></li>
               </ul>
             </li>
           </ul>
@@ -540,9 +540,9 @@ crossorigin="anonymous"></script>
         </div>
         <div class="modal-body">
               <ul>
-					<li><a href="http://www.aflcio.org/" target="_blank">AFL-CIO</a></li>
-					<li><a href="http://www.stpaulunions.org" target="_blank">St. Paul Regional Labor Federation</a></li>
-					<li><a href="http://www.minneapolisunions.org" target="_blank">Minneapolis Regional Labor Federation</a></li>
+					<li><a href="http://www.aflcio.org/" target="_self">AFL-CIO</a></li>
+					<li><a href="http://www.stpaulunions.org" target="_self">St. Paul Regional Labor Federation</a></li>
+					<li><a href="http://www.minneapolisunions.org" target="_self">Minneapolis Regional Labor Federation</a></li>
 				</ul>  
         </div>
         <div class="modal-footer">
