--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ crossorigin="anonymous"></script>
     
 <!--APWU Stewads images and name-->
 <div class="stewarts">
-  <h6 class="stewarts-title">MEET YOUR STEWARDS</h6>
+  <h6 class="stewarts-title">Meet your E-Board</h6>
   <img src="images/placeholder.png" alt="Teresa Burns" class="avatars">
   <img src="images/placeholder.png"  alt="Timothy Frankland (Chief)" class="avatars"> 
   <img src="images/placeholder.png"  alt="Don Kusick" class="avatars"> 
